added avatars and a way to see who reserved a gift
